--- a/src/TODO
+++ b/src/TODO
@@ -3,12 +3,30 @@ Bug
 
 
 功能
+- ~~退出~~
 - 内容生成脚本
     - ~~MKV~~
     - JSON
 - 细节功能完善,去除hardcode
 - 实验测试脚本
+- 配置文件
+- 暂停/恢复
+- 全景视图下FoV显示
+- 流量统计
+- 带宽监测
 
 优化
 - nop tile生成
 - FoV和Predict区域用Shader绘制
+
+
+
+实验
+- 测量
+    - 
+- 内容生成脚本
+- 
+
+
+输入
+- 
